# coding-python

./: README.md
00-the-complete-setup-python-project/: README.md  pyproject.toml
bootcamp-lu/lesson-05-reading-01-billion-rows/: README.md
challenges/bonus_challenge/: README.md  try_except_challenge.py  while_challenge.py
challenges/create-excel-file/: main.py  pyproject.toml
challenges/one-billion-row-challenge/: .gitignore  README.md  pyproject.toml  requirements.txt
challenges/one-billion-row-challenge/src/: create_measurements.py
challenges/read_csv/: README.md  etl.py  pipeline.py
challenges/read_csv_json/: README.md  etl.py  pyproject.toml  requirements.txt
challenges/read_csv_json_with_quality/: README.md  exemplo_00.py  pyproject.toml
challenges/sql_alchemy_model/: README.md  pyproject.toml
challenges/sql_alchemy_model/src/: create_db_tables.py  insert.py  query.py
exercises/alura_pep8_good_practices/: pyproject.toml  requirements.txt
exercises/alura_solid_principles/: README.md  cliente.py  main.py  pyproject.toml
exercises/class01_basic/: basic_input_output.py
exercises/class02_try_except/: simple_calculator.py  temperature_calculator.py  try_except.py  type_check.py  type_conversion.py  type_error.py
exercises/class03_debug_if_for_while/: for.py  for_valid_users.py  if.py  if_anomaly_transaction.py  if_log_filter.py  while.py  while_valid_input.py
exercises/class07_functions/: calculate_median_function.py  def_function_basic.py
exercises/class19_fastapi/: main.py  pyproject.toml  test.db
exercises/class19_fastapi/class_exercises/: main_class.py
libs/: 01-pyenv.md
oop/: 100-oop.md  101-oop-constructors.md  102-oop-Inheritance.md  103-oop-encapsulation.md  104-oop-polymorphism.md
oop/src/: constructor_default.py  constructor_parameterized.py  encapsulation_example.py  encapsulation_example_private.py  encapsulation_example_protected.py  encapsulation_example_public.py  inheritance_example.py  oop_car_example.py  polymorphism_example.py
topics/: 00-start-here.md  00-the-basic.md  01-text-manipulation.md  02-terminal-colors.md  03-conditions.md  04-while-and-for.md  05-tuples-lists-dictionares.md  06-function-interactivehelp-docstrings-modules.md  07-try-except-block.md  08-zips-and-arguments.md  09-list-comprehension.md  10-set.md  11-ordering.md  12-random.md  13-enumerate.md  14-generators.md  15-regEx.md  16-loguru-logging.md  17-decorators.md  18-orm.md  19-sql-model.md  20-mvc.md  20-sql-alchemy.md  21-api.md  21-solid.md  22-mvc.md  22-venv_cronjobs.md
topics/libs/: 00-pip.md  01-pyenv.md  02-poetry.md  03-taskipy.md  04-pytest.md  05-mkdcos.md  05-mkdocs.md  10-pydantic.md  11-fastapi.md  14-github-actions.md  15-pre-commit.md  16-uv.md
topics/src/: arithmetic_operators.py  conditions.py  (+27 more)
(+29 files in other folders)
